--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
           </li>
 
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">
+            <a href="#event" class="nav-list__link">
             Виставки та події
             </a>
           </li>
@@ -86,6 +86,12 @@
           <li class="nav-list__item">
             <a href="#" class="nav-list__link">
             Квитки
+            </a>
+          </li>
+
+          <li class="nav-list__item">
+            <a href="#contact" class="nav-list__link">
+              Контакти
             </a>
           </li>
         </ul>
@@ -214,7 +220,127 @@
       </section>
     </main>
 
-    <footer>
+    <footer
+      class="container grid grid--desktop footer"
+    >
+      <div class="footer-link footer-link__margin">
+        <a href="#" class="logo footer-link__logo">
+          na <br> mu
+        </a>
+        <div class="footer-link__social">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="footer-link__link footer-link__link--f"
+          >
+          </a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer-link__link footer-link__link--i"
+          >
+          </a>
+        </div>
+
+      </div>
+
+      <div class="footer-schedule grid__item-tab--2-3 grid__item-desk--3-4">
+        <h4>
+          Графік роботи:
+        </h4>
+        <ul>
+          <li class="footer-schedule__li-wrap">
+            <span class="footer--bold-font">12:00 — 20:00</span>
+            <span>середа</span>
+          </li>
+          <li class="footer-schedule__li-wrap">
+            <span class="footer--bold-font">12:00 — 20:00</span> четвер
+          </li>
+          <li class="footer-schedule__li-wrap">
+            <span class="footer--bold-font">12:00 — 20:00</span> п’ятниця
+          </li>
+          <li class="footer-schedule__li-wrap">
+            <span class="footer--bold-font">11:00 — 19:00</span> субота
+          </li>
+          <li class="footer-schedule__li-wrap">
+            <span class="footer--bold-font">11:00 — 19:00</span> неділя
+          </li>
+        </ul>
+        <p>
+          <span class="footer--bold-font">Вихідні:</span>
+          понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+
+      <div class="footer-contact grid__item-tab--4-5 grid__item-desk--5-6" id="contact">
+        <h4>
+          Контакти:
+        </h4>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/JUnrcEacNQhrZWS96">
+              вул. М. Грушевського, 6; Київ, <br> 01001
+            </a>
+          </li>
+
+          <li>
+            <a href="tel:+38 (044) 278-13-57">
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+
+          <li>
+            <a href="tel:+38 (044) 278-74-54">
+              факс +38 (044) 278-74-54
+            </a>
+          </li>
+
+          <li>
+            <a href="mailto:info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-nav grid__item-tab--2-5 grid__item-desk--8-12">
+        <ul class="footer-nav__list">
+          <li>
+            <a href="#">
+              Галерея
+            </a>
+          </li>
+          <li>
+            <a href="#event">
+              Виставки та події
+            </a>
+          </li>
+        </ul>
+
+        <ul class="footer-nav__list">
+          <li>
+            <a href="#subscribe">
+              Про Нас
+            </a>
+          </li>
+          <li>
+            <a href="#contact">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
+
+
+    <div class="container sub-footer">
+      <p class="sub-footer__p">
+        Copyright © 2019. All Rights Reserved.
+      </p>
+      <p class="sub-footer__p">
+        Designed by Zhyriada Marina
+      </p>
+    </div>
+
   </body>
 </html>
