--- a/src/index.html
+++ b/src/index.html
@@ -171,13 +171,14 @@
               </div>
             </div>
           </div>
-          <div class="grid--desktop special-event">
+          <div class="special-event">
             <div class="special-event__picture-container">
               <img
                 class="special-event__picture"
                 src="images/photo/picture_3.png"
                 alt="picture 3"
               >
+
             </div>
           </div>
           <div class="special-event__deskription">
@@ -191,7 +192,8 @@
                 </div>
               </div>
               <div class="special-event__name">
-                Від класицизму до романтизму
+                Від класицизму до
+                <br> романтизму
               </div>
             </div>
           </div>
@@ -285,11 +287,16 @@
           <p class="subscribe__subtitle">
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
-          <form action="#">
+          <form
+            class="subscribe__form"
+            action="#"
+            id="form-subscribe"
+          >
             <label class="subscribe__content">
               <input
+                id="input"
                 name="email"
-                placeholder="Email"
+                placeholder="E-mail"
                 class="subscribe__text"
                 type="email"
                 required
@@ -339,7 +346,7 @@
           </div>
         </div>
         <div class="grid grid__item grid--desktop-footer">
-          <div class="wrapper grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+          <div class="wrapper grid__item--1-1 grid__item--tablet-2-4 grid__item--desktop-3-4">
             <div class="footer__block-text">
               <h4 class="footer__text">
                 Графік роботи
@@ -357,15 +364,17 @@
               </p>
               <p class="footer__text-second">
                 <strong>Вихідні:</strong> понеділок, вівторок
+                Каса припиняє роботу за 1
                 <br>
-                Каса припиняє роботу за 1 годину
+                годину
                 <br>
                 до закриття музею
+                <br>
               </p>
             </div>
 
           </div>
-          <div class="grid__item--tablet-4-5 grid__item--2-2 grid__item--desktop-5-6">
+          <div class="grid__item--tablet-5-6 grid__item--2-2 grid__item--desktop-5-6">
             <div class="footer__block-text">
               <h4 class="footer__text">
                 Контакти:
@@ -380,7 +389,6 @@
                   Київ, 01001
               </a>
 
-              <br>
               <a
                 href="tel:+38 (044) 278-13-57"
                 class="footer__text footer__text-hover"
@@ -428,7 +436,7 @@
               </a>
             </div>
           </div>
-          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+          <div class="grid__item--2-2 grid__item--tablet-5-6 grid__item--desktop-10-11">
             <div class="footer__block-text">
               <a href="#subscribe" class="footer__title">
                 Про нас
