--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <div class="header__icons">
         <a
-          href="#"
+          href="#burger"
           class="header__icons--burger"
         >
           <img
@@ -58,7 +58,11 @@
           <p href="#" class="header__button--fake-button">
             Квитки
           </p>
-          <button class="header__button--real-button">
+          <button
+            name="ticket"
+            class="header__button--real-button"
+            type="button"
+          >
             <img src="./images/icons/Vector-for-button.png" alt="button icon">
           </button>
         </div>
@@ -69,6 +73,23 @@
         <a href="#events" class="header__events--content">Події</a>
       </div>
     </header>
+
+    <div class="header__burgerMenu" id="burger">
+      <a href="#" class="header__burgerMenu-icon">
+        <img src="./images/icons/cross.svg" alt="off icon">
+      </a>
+      <ul>
+        <li class="header__burgerMenu-li">
+          <a href="#events" class="header__burgerMenu-link">Події</a>
+        </li>
+        <li class="header__burgerMenu-li">
+          <a href="#subscription" class="header__burgerMenu-link">Рєстрація</a>
+        </li>
+        <li class="header__burgerMenu-li">
+          <a href="#aboutUs" class="header__burgerMenu-link">Про нас</a>
+        </li>
+      </ul>
+    </div>
 
     <main class="content">
       <div class="content__events" id="events">
@@ -139,8 +160,8 @@
         </div>
       </div>
 
-      <div class="content__gallery--forDesktop">
-        <p class="content__gallery--text">
+      <div class="content__gallery--forDesktop" id="gallery">
+        <p class="content__gallery--forDesktop-text">
           Галерея
         </p>
         <div class="content__gallery--forDesktop-first">
@@ -209,7 +230,7 @@
         </div>
       </div>
 
-      <div class="content__subscription">
+      <div class="content__subscription" id="subscription">
         <p class="content__subscription--title">
           Підписка
         </p>
@@ -217,14 +238,21 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
         <div class="content__subscription--form">
-          <input
+          <form
+            action="."
+            class="content__subscription--form"
+            id="formID"
+          >
+            <input
             type="email"
             placeholder="email"
             class="content__subscription--form-input"
           >
-          <button class="content__subscription--form-button">
-            <img src="./images/icons/Vector-for-button.png" alt="button icon">
-          </button>
+            <button class="content__subscription--form-button">
+              <img src="./images/icons/Vector-for-button.png" alt="button icon">
+            </button>
+          </form>
+
         </div>
       </div>
     </main>
@@ -257,7 +285,7 @@
 
       <div class="footer__about">
         <div class="footer__about--workTime">
-          <p class="footer__about--items">
+          <p class="footer__about--items" id="aboutUs">
             Графік роботи <br>
           </p>
 
@@ -280,7 +308,7 @@
             до закриття музею
           </p>
         </div>
-        <div class="footer__about--contacts">
+        <div class="footer__about--contacts" id="contacts">
           <p class="footer__about--items">
             Контакти:
           </p>
@@ -321,13 +349,13 @@
 
       <div class="footer__nav">
         <div class="footer__nav--column1">
-          <a href="#" class="footer__nav--firstLink">Галерея</a>
-          <a href="#" class="footer__nav--secondLink">Виставки та події</a>
+          <a href="#gallery" class="footer__nav--firstLink">Галерея</a>
+          <a href="#events" class="footer__nav--secondLink">Виставки та події</a>
         </div>
 
         <div class="footer__nav--column2">
-          <a href="#" class="footer__nav--firstLink">Про Нас</a>
-          <a href="#" class="footer__nav--secondLink">Контакти</a>
+          <a href="#aboutUs" class="footer__nav--firstLink">Про Нас</a>
+          <a href="#contacts" class="footer__nav--secondLink">Контакти</a>
         </div>
       </div>
 
