--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,91 @@
 
     </header>
 
+    <main>
+
+      <section class="page__section" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+          <div class="events">
+            <div class="events__photo">
+              <img src="./images/first-event-photo.svg"
+                alt="pictures"
+                class="events__photo-img"
+              >
+            </div>
+            <div class="events__content">
+              <p class="events__exhibition-date">
+                <span class="events__text">виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
+              </p>
+
+              <h3 class="events__exhibition-name">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="events__description-text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events">
+            <div class="events__photo">
+              <img src="./images/second-event-photo.svg"
+                alt="photo"
+                class="events__photo-img"
+              >
+            </div>
+            <div class="events__content">
+              <p class="events__exhibition-date">
+                <span class="events__text">виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
+              </p>
+
+              <h3 class="events__exhibition-name events__exhibition-name--2">
+                І спогади і мрії
+              </h3>
+
+              <p class="events__description-text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="events events--big">
+          <div class="events__big-photo">
+            <img src="./images/lection-photo.svg"
+              alt="photo"
+              class="events__photo-img events__photo-img--big"
+            >
+          </div>
+          <div class="events__content
+            events__content--big"
+          >
+            <p class="events__lecture-date">
+              <span class="events__text">лекція</span>
+              <span class="events__date">26/08/2019 - 11:00</span>
+            </p>
+
+            <h3 class="events__lecture-name">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section" id="gallery">
+
+      </section>
+    </main>
+
     <footer>
       <section class="sign-up" id="sign-up">
         <h3 class="sign-up__title">
