--- a/src/index.html
+++ b/src/index.html
@@ -8,42 +8,88 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body class="page__body">
-    <header class="header">
-      <div class="header__block">
-        <div class="header__menu header__menu--modify">
-          <a href="#menu" class="icon icon--menu-opener">
-            <img src="/images/icons/menu.svg" alt="Menu">
-          </a>
+    <header class="header page__header" id="about-us">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__img-box">
+            <div class="header__nav">
+              <a href="#menu" class="header__menu-icon">
+                <img src="/images/icons/menu.svg" alt="Menu">
+              </a>
+
+              <a href="/" class="header__menu-logo">
+                <img
+                  class="logo__img"
+                  src="/images/icons/NA MU.svg"
+                  alt="logo">
+              </a>
+            </div>
+          </div>
+
+          <div class="header__text-block">
+            <h1 class="header__title">художній <br> музей</h1>
+
+            <div class="header__tickets">
+              <a href="#contacts" class="header__tickets-button">
+                <p class="header__tickets-button-text">квитки</p>
+              </a>
+              <a href="#contacts" class="header__tickets-link">
+                <img
+                  class="header__tickets-link-img"
+                  src="/images/icons/tickets-go.svg"
+                  alt="Tickets Go">
+              </a>
+            </div>
+          </div>
+
+          <div class="header__events">
+            <div class="header__events-line"></div>
+            <p class="header__events-text">події</p>
+          </div>
         </div>
 
-        <h1 class="header__title">художній <br> музей</h1>
-
-        <div class="header__tickets">
-          <a href="/" class="header__tickets-text">квитки</a>
-          <a href="/" class="header__tickets-go">
-            <img
-              class="header__tickets-img"
-              src="/images/icons/tickets-go.svg" alt="Tickets Go">
-          </a>
-        </div>
-
-        <div class="header__events">
-          <p class="header__events-text">події</p>
-        </div>
-      </div>
-
-      <div class="header__picture">
-        <a href="/" class="header__picture-logo">NA<br>MU</a>
       </div>
     </header>
 
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <div class="top-actions menu__top">
-            <a href="/" class="logo">
+          <div href="/" class="menu__icons">
+            <a href="#" class="menu__icon--cross">
+              <img src="/images/icons/cross.svg" alt="exit">
+            </a>
+          </div>
 
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Головна</a>
+            </li>
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">Вистави та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#now-on-view" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#explore-online" class="menu__link">Приєднатись до нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <div class="menu__add-block">
+            <a
+              href="tel:+1 212-535-7710"
+              class="menu__call menu__add--info">
+              Телефон: +1 212-535-7710
+            </a>
+            <a
+              href="#events"
+              class="menu__call menu__add--info">
+              Придбати квиток
             </a>
           </div>
         </div>
@@ -52,7 +98,7 @@
 
     <main>
       <section class="page__section" id="events">
-        <div class="events__container">
+        <div class="events container">
           <h2 class="events__title">Актуальні події</h2>
 
           <div class="events__item event">
@@ -105,53 +151,56 @@
               </div>
             </div>
 
-
-            <div class="events__item events__item--bottom">
-
-              <div class="event__bottom-image events__photo--bottom">
-
-                <div class="event__info event__info--bottom">
-                  <div class="event__box event__box--bottom">
-                    <p class="event__type">лекція</p>
-                    <p class="event__date">26/08/2019 - 11:00</p>
+            <div class="container">
+              <div class="events__item events__item--bottom">
+                <div class="event__bottom-image events__photo--bottom">
+                  <div class="event__info event__info--bottom">
+                    <div class="event__box event__box--bottom">
+                      <p class="event__type">лекція</p>
+                      <p class="event__date">26/08/2019 - 11:00</p>
+                    </div>
+                    <h3 class="event__title">
+                      <a hhref="#" class="event__link">
+                        Від класицизму до романтизму
+                      </a>
+                    </h3>
                   </div>
-                  <h3 class="event__frame-title">
-                    <a hhref="#" class="event__link">
-                      Від класицизму до романтизму
-                    </a>
-                  </h3>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </section>
 
+
       <section class="page__gallery gallery" id="Gallery">
-        <p class="gallery__title">Галерея</p>
+        <div class="container">
+          <p class="gallery__title">Галерея</p>
 
-        <div class="gallery__first">
-          <img
-          class="gallery__image"
-          src="/images/gallery1.jpg"
-          alt="gallery">
+          <div class="gallery__first">
+            <img
+            class="gallery__image"
+            src="/images/gallery1.jpg"
+            alt="gallery">
 
-          <img
-          class="gallery__image"
-          src="/images/gallery2.jpg"
-          alt="gallery">
-        </div>
+            <img
+            class="gallery__image"
+            src="/images/gallery2.jpg"
+            alt="gallery">
+          </div>
 
-        <div class="gallery__second">
-          <img
-          class="gallery__image"
-          src="/images/gallery3.jpg"
-          alt="gallery">
+          <div class="gallery__second">
+            <img
+            class="gallery__image"
+            src="/images/gallery3.jpg"
+            alt="gallery">
 
-          <img
-          class="gallery__image"
-          src="/images/gallery4.jpg"
-          alt="gallery">
+            <img
+            class="gallery__image"
+            src="/images/gallery4.jpg"
+            alt="gallery">
+          </div>
         </div>
       </section>
 
@@ -197,32 +246,34 @@
       </section>
     </main>
 
+    <div class="container">
+      <div class="sub">
+        <div class="subscription" id="subscription">
+          <div class="subscription__picture"></div>
+          <p class="subscription__title">Підписка</p>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-    <div class="sub">
-      <div class="subscription" id="subscription">
-        <div class="subscription__picture"></div>
-        <p class="subscription__title">Підписка</p>
-        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-
-        <div class="subscription__input">
-          <form action="/" class="subscription__form">
-            <input
-              class="subscription__email"
-              type="text"
-              name="text"
-              id="email"
-              placeholder="E-mail"
-            >
-            <button type="submit" class="subscription__icon">
-              <img
-                class="subscription__icon-pic"
-                src="/images/icons/go.svg"
-                alt="go">
-            </button>
-          </form>
+          <div class="subscription__input">
+            <form action="/" class="subscription__form">
+              <input
+                class="subscription__email"
+                type="text"
+                name="text"
+                id="email"
+                placeholder="E-mail"
+              >
+              <button type="submit" class="subscription__icon">
+                <img
+                  class="subscription__icon-pic"
+                  src="/images/icons/go.svg"
+                  alt="go">
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
+
 
     <footer>
       <div class="footer">
