the gallery looks better - added the menu - still struggling with adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,14 @@
   <body>
     <header class="header">
       <div class="container">
+
         <div class="header__menu">
-          <a href="/" class="header__menu-opener">
+          <a href="#menu" class="header__menu---opener">
             <img
               src="./images/Vector.png"
               alt="header__menu-opener">
           </a>
-          <div class="header__menu-logo">
+          <div class="header__menu--logo">
             <a href="#">
               <img src="./images/NA MU.png" alt="logo">
             </a>
@@ -33,6 +34,173 @@
       </div>
 
     </header>
+
+    <nav class="menu" id="menu">
+      <div class="menu__header">
+        <div class="menu__logo menu__header-logo">
+          <img src="./images/NA MU.png" alt="logo">
+        </div>
+        <div class="menu__close menu__header-close">
+          <a href="#" class="menu__close-button">X</a>
+        </div>
+
+      </div>
+      <div class="menu__button">
+        <label
+          for="email">
+        </label>
+        <input
+          type="email"
+          placeholder="E-mail"
+          name="email"
+          class="menu__button-text">
+        <a class="menu__button-search">></a>
+      </div>
+
+      <div class="hero__button">
+        <div class="hero__button--item">
+          кивтки
+        </div>
+        <a href="#" class="hero__button--search">
+          >
+        </a>
+      </div>
+      <div class="menu__footer">
+        <div class="grid">
+          <div class="grid__item grid__item--1">
+            <div class="footer__logo">
+              <img
+                src="./images/logo_footer.png"
+                alt="logo"
+                class="footer__logo-pic">
+              <div class="footer__logo--links">
+                <a href="https://www.facebook.com/namu.museum/" class="footer__logo-link">
+                  <img
+                    src="./images/Facebook.png"
+                    alt="facebook_link"
+                    >
+                </a>
+                <a href="https://www.instagram.com/namu.museum/">
+                  <img
+                    src="./images/insta.png"
+                    alt="instagram_link"
+                    >
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--3-4">
+            <div class="footer_schedule">
+              <div class="footer_schedule-times">
+                <h3>Графік роботи</h3>
+                <div>
+                  <div>
+                    12:00 — 20:00
+                  </div>
+                  <div>
+                    середа
+                  </div>
+                  <div>
+                    12:00 — 20:00
+                  </div>
+                  <div>
+                    четвер
+                  </div>
+                  <div>
+                    12:00 — 20:00
+                  </div>
+                  <div>
+                    п’ятниця
+                  </div>
+                  <div>
+                    11:00 — 19:00
+                  </div>
+                  <div>
+                    субота
+                  </div>
+                  <div>
+                    11:00 — 19:00
+                  </div>
+                  <div>
+                    неділя
+                  </div>
+                  <div>
+                    Вихідні понеділок, вівторок
+                    <br>
+                    Kaca припиняє роботу за 1 годину
+                    <br>
+                    до закриття музею
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--5-6">
+            <div class="footer__schedule-contacts">
+              <h3>Контакти:</h3>
+              <div>
+                <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
+                  вул. M. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img
+              src="./images/footer_line_hor.png"
+              alt="line"
+              class="footer__line-desktop">
+          </div>
+          <div>
+            <img
+              src="./images/footer_line_ver.png"
+              alt="line"
+              class="footer__line-mobile">
+          </div>
+          <div>
+            <a href="#">
+              <img
+              src="./images/Ellipse.png"
+              alt="go_to_the_top"
+              class="footer__return">
+            </a>
+          </div>
+          <div class="grid__item grid__item--8-10">
+            <div class="footer__nav">
+              <div>
+                <a href="#gallery" class="footer__nav-link">
+                  Галерея
+                </a>
+              </div>
+              <div>
+                <a href="#" class="footer__nav-link">
+                  Про Hac
+                </a>
+              </div>
+              <div>
+                <a href="#exhibition" class="footer__nav-link">
+                  Виставки та події
+                </a>
+              </div>
+              <div class="footer__nav-link">
+                Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </nav>
 
     <main>
       <div class="hero">
@@ -44,10 +212,10 @@
               МУЗЕЙ
             </h2>
             <div class="hero__button">
-              <div class="hero__button-item">
+              <div class="hero__button--item">
                 кивтки
               </div>
-              <a href="#" class="hero__button-search">
+              <a href="#" class="hero__button--search">
                 >
               </a>
             </div>
@@ -70,7 +238,7 @@
               події
             </h2>
           </div>
-          <div class="grid__item grid__item--1-7">
+          <div class="grid__item grid__item--1-7 page__section-painting-container">
             <img src="./images/painting1.png" alt="painting_nature"
               class="page__section-painting">
           </div>
@@ -90,7 +258,7 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--1-7">
+          <div class="grid__item grid__item--1-7 page__section-painting-container">
             <img
               src="./images/painting2.png"
               alt="painting_girl"
@@ -132,12 +300,47 @@
         </div>
       </section>
 
-      <section class="page__section page__section-gallery">
-        <h2 class="page__section-title" id="gallery">
+      <section class="page__section page__section-gallery gallery">
+        <h2 class="gallery__title" id="gallery">
           Галерея
         </h2>
+        <div class="grid">
+          <div class="gallery__paintings"></div>
+          <div class="grid__item grid__item--1-4">
+            <div class="gallery__photo-container">
+              <img
+                src="./images/swipe1.png"
+                alt="girl"
+                class="gallery__photo">
+            </div>
+          </div>
+          <div class="grid__item grid__item--5-12">
+            <div class="gallery__photo-container">
+              <img
+              src="./images/swipe2.png"
+              alt="village"
+              class="gallery__photo">
+            </div>
+          </div>
+          <div class="grid__item grid__item--1-8">
+            <div class="gallery__photo-container">
+              <img
+              src="./images/swipe3.png"
+              alt="park"
+              class="gallery__photo">
+            </div>
+          </div>
+          <div class="grid__item grid__item--9-12">
+            <div class="gallery__photo-container">
+              <img
+              src="./images/swipe4.png"
+              alt="sea"
+              class="gallery__photo">
+            </div>
+          </div>
+        </div>
 
-        <div class="swiper">
+        <!--<div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
@@ -168,7 +371,7 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
           <div class="swiper-scrollbar"></div>
-        </div>
+        </div> -->
       </section>
 
       <section class="subscribe">
@@ -197,19 +400,22 @@
       <div class="grid">
         <div class="grid__item grid__item--1">
           <div class="footer__logo">
-            <img src="./images/logo_footer.png" alt="logo">
-            <div class="footer__logo-links">
-              <a href="https://www.facebook.com/namu.museum/">
+            <img
+              src="./images/logo_footer.png"
+              alt="logo"
+              class="footer__logo-pic">
+            <div class="footer__logo--links">
+              <a href="https://www.facebook.com/namu.museum/" class="footer__logo-link">
                 <img
                   src="./images/Facebook.png"
                   alt="facebook_link"
-                  class="footer__logo-link">
+                  >
               </a>
               <a href="https://www.instagram.com/namu.museum/">
                 <img
                   src="./images/insta.png"
                   alt="instagram_link"
-                  class="footer__logo-link">
+                  >
               </a>
             </div>
           </div>
@@ -300,20 +506,20 @@
           </a>
         </div>
         <div class="grid__item grid__item--8-10">
-          <div class="footer__links">
+          <div class="footer__link-container">
             <div>
               <a href="#gallery" class="footer__link">
                 Галерея
               </a>
             </div>
             <div>
-              <a href="#" class="footer__link">
-                Про Hac
+              <a href="#exhibition" class="footer__link">
+                Виставки та події
               </a>
             </div>
             <div>
-              <a href="#exhibition" class="footer__link">
-                Виставки та події
+              <a href="#" class="footer__link">
+                Про Hac
               </a>
             </div>
             <div class="footer__link">
